<resources>
    <string name="app_name">PollEase</string>

    <string name="host">pollease.herokuapp.com</string>
    <string name="base_url">http://pollease.herokuapp.com/</string>
    <string name="web_poll_url">http://pollease.herokuapp.com/polls/:poll_id</string>
    <string name="base_api_url">http://pollease.herokuapp.com/api/v1/</string>
    <string name="polls_url">http://pollease.herokuapp.com/api/v1/polls/</string>
    <string name="session_url">http://pollease.herokuapp.com/api/v1/sessions</string>
    <string name="selection_url">http://pollease.herokuapp.com/api/v1/polls/:poll_id/selections/:id</string>
    <string name="choices_url">http://pollease.herokuapp.com/api/v1/polls/:poll_id/choices</string>
    <string name="delete_choice_url">http://pollease.herokuapp.com/api/v1/polls/:poll_id/choices/:choice_id</string>
    <string name="authorize_url">http://pollease.herokuapp.com/api/v1/polls/:poll_id/authorize</string>

    <string name="title_activity_capture_activity_any_orientation">CaptureActivityAnyOrientation</string>
    <string name="title_activity_poll_edit">Edit Poll</string>
    <string name="title_activity_poll">Poll</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_new_scan">New scan</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_poll">Create poll</string>

    <string name="create_poll_title">Create a poll</string>
    <string name="create_poll_password_info">This password will be required to edit poll. Can be blank.</string>

    <string name="prompt_question">Question</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_vote">Vote</string>
    <string name="poll_question_filler">Poll question</string>
    <string name="pie_chart_name">Pie Chart</string>
    <string name="prompt_answer">Add choice</string>
    <string name="action_create_answer">Add answer</string>
    <string name="action_edit_poll">Edit Poll</string>
    <string name="create_poll_password_required_info">This password is set on poll creation. Might be blank.</string>
    <string name="new_poll_title">Create a poll</string>
    <string name="verify_password_title">Verify password</string>
    <string name="poll_edit_answers_title">Edit poll answer</string>
    <string name="create_poll_info">These information is permanent and cannot be changed later.</string>
    <string name="share_poll_text">Share poll</string>
    <string name="edit_poll_text">Edit poll</string>
    <string name="refresh_text">Refresh</string>
    <string name="pie_chart_text">Pie Chart</string>
    <string name="save_text">Save</string>
    <string name="scan_qr_text">Scan QR</string>
    <string name="cancel_text">Cancel</string>
    <string name="edit_text">Edit</string>
    <string name="remember_password_check_text">Remember password</string>

</resources>
